[backend] fix swagger error for lesson,chapter and subject
