# Backend/api/routes/route.go
@@ -1,31 +1,37 @@
 package routes
 
 import (
+	"Brilliant/config"
 	"gorm.io/gorm"
-    "Brilliant/config"
 
-    "github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin"
 )
 
 func Setup(env *config.Env, getDb func() *gorm.DB, gin *gin.Engine) {
-    // Setup routes
-    publicRouter := gin.Group("")
+	// Setup routes
+	publicRouter := gin.Group("")
 
 	// Setup user routes
-    NewUserRouter(env, getDb, publicRouter)
+	NewUserRouter(env, getDb, publicRouter)
 
-    // setup subject routes
-    NewSubjectRouter(env, getDb, publicRouter)
+	// setup subject routes
+	NewSubjectRouter(env, getDb, publicRouter)
 
-    // Setup experiment routes
-    NewExperimentRouter(env, getDb, publicRouter)
+	// setup lesson routes
 
-    // setup quiz routes
-    NewQuizRouter(env, getDb, publicRouter)
+	NewLessonRouter(env, getDb, publicRouter)
 
-    // setup exam prep routes
-    NewExamPrepRouter(env, getDb, publicRouter)
+	// setup chapter routes
+	NewChapterRouter(env, getDb, publicRouter)
 
+	// Setup experiment routes
+	NewExperimentRouter(env, getDb, publicRouter)
+
+	// setup quiz routes
+	NewQuizRouter(env, getDb, publicRouter)
+
+	// setup exam prep routes
+	NewExamPrepRouter(env, getDb, publicRouter)
 
 	// setup other routes below when needed
 }
