# Backend/application/dtos/chapter/chapter.go
@@ -1,0 +1,6 @@
+package dtos
+
+type ChapterDTO struct {
+	SubjectID   uint   `json:"id"`
+	ChapterName string `json:"chapterName"`
+}
